--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "bootstrap": "^5.3.3",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
+    "framer": "^2.4.1",
+    "framer-motion": "^11.1.9",
+    "motion": "^10.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
