--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
+    "express": "^4.19.2",
     "framer": "^2.4.1",
     "framer-motion": "^10.13.1",
     "motion": "^10.17.0",
+    "nodemailer": "^6.9.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
